<resources>
    <string name="app_name">SimpleChat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hint_id">Chat ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_login">Login</string>
    <string name="hint_register">Register</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_logout">Logout</string>
    <string name="hint_switch">Switch User</string>
    <string name="hint_message">Message</string>

    <string name="prefix_id">ID: </string>
    <string name="chat_first_message">Let\'s Chat!</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="nick_name">Full Name</string>
    <string name="chat_id">Chat ID</string>
    <string name="my_gender">Gender</string>
    <string name="save">Save</string>
    <string name="choose_gender">Choose Gender</string>

    <string name="hint_search_users">Input ID or Nickname</string>
    <string name="invite">Invite</string>
    <string name="friends_invitations">Friends Invitations</string>
    <string name="accept">Accept</string>
    <string name="pending">Pending</string>
    <string name="added">Added</string>

    <string name="action_search">Search</string>
    <string name="action_more">More</string>
    <string name="menu_group_chat">Group Chat</string>
    <string name="menu_feedback">FeedBack</string>
    <string name="menu_add_friends">Add Friends</string>
    <string name="menu_scan">Scan</string>

    <string name="tab_default">Default</string>
    <string name="tab_chats">Chat</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_discover">Discover</string>
    <string name="tab_me">Me</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_success">RegisterSuccessActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_switch_login">SwitchLoginActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_search_users">SearchUsersActivity</string>
    <string name="title_activity_invitations">InvitationsActivity</string>
</resources>
