<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/action_search"
        android:title="@string/action_search"
        android:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_group_chat"
        android:icon="@drawable/menu_group_chat"
        android:title="@string/menu_group_chat"/>
    <item
        android:id="@+id/menu_add_friend"
        android:icon="@drawable/menu_add_friends"
        android:title="@string/menu_add_friends"/>
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/menu_scan"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/menu_feedback"
        android:title="@string/menu_feedback"/>


</menu>
