<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cn.thu.guohao.simplechat.ui.RegisterActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_id"
            android:textSize="18sp"
            android:layout_width="110dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_reg_id"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/id_rg_register_sex"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/id_rb_register_male"
            android:checked="true"
            android:paddingRight="15dp"
            android:text="@string/hint_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/id_rb_register_female"
            android:text="@string/hint_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_username"
            android:textSize="18sp"
            android:layout_width="110dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_reg_username"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_password"
            android:textSize="18sp"
            android:layout_width="110dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_reg_password"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_confirm_password"
            android:textSize="18sp"
            android:layout_width="110dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_reg_confirm"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/id_bt_register"
        android:background="@drawable/selector_button_blue"
        android:layout_gravity="center"
        android:text="@string/hint_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
