<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:lgh="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:background="@drawable/tab_bg"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">
        <cn.thu.guohao.simplechat.view.PagerIcon
            android:id="@+id/id_pi_chats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            lgh:pi_color="#ff45c01a"
            lgh:pi_text="@string/tab_chats"
            lgh:pi_text_size="12sp"
            lgh:pi_icon="@drawable/tab_chats"/>
        <cn.thu.guohao.simplechat.view.PagerIcon
            android:id="@+id/id_pi_contacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            lgh:pi_color="#ff45c01a"
            lgh:pi_text="@string/tab_contacts"
            lgh:pi_text_size="12sp"
            lgh:pi_icon="@drawable/tab_contacts"/>
        <cn.thu.guohao.simplechat.view.PagerIcon
            android:id="@+id/id_pi_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            lgh:pi_color="#ff45c01a"
            lgh:pi_text="@string/tab_discover"
            lgh:pi_text_size="12sp"
            lgh:pi_icon="@drawable/tab_discover"/>
        <cn.thu.guohao.simplechat.view.PagerIcon
            android:id="@+id/id_pi_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            lgh:pi_color="#ff45c01a"
            lgh:pi_text="@string/tab_me"
            lgh:pi_text_size="12sp"
            lgh:pi_icon="@drawable/tab_me"/>
    </LinearLayout>
</LinearLayout>
