<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cn.thu.guohao.simplechat.ui.SwitchLoginActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_username"
            android:textSize="18sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_switch_username"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="50dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_password"
            android:textSize="18sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_switch_password"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/id_bt_login_switch"
        android:background="@drawable/selector_button_blue"
        android:layout_gravity="center"
        android:text="@string/hint_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/id_tv_switch_register"
        android:clickable="true"
        android:padding="20dp"
        android:layout_gravity="end"
        android:textColor="#ff765432"
        android:text="@string/hint_register"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
