<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cn.thu.guohao.simplechat.ui.LoginActivity">

    <ImageView
        android:id="@+id/id_iv_login"
        android:paddingTop="30dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:layout_width="96dp"
        android:layout_height="96dp" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/id_tv_login_username"
        android:textSize="20sp"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/hint_password"
            android:textSize="18sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/id_et_login_password"
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/id_bt_login"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_button_blue"
            android:text="@string/hint_login"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:id="@+id/id_pb_login"
            android:layout_toRightOf="@id/id_bt_login"
            android:visibility="invisible"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/id_tv_login_switch"
            android:clickable="true"
            android:padding="20dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="start"
            android:textColor="#ff234567"
            android:text="@string/hint_switch"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/id_tv_register"
            android:clickable="true"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:textColor="#ff765432"
            android:text="@string/hint_register"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>
