<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:divider="@android:color/holo_red_dark"
    tools:context="cn.thu.guohao.simplechat.ui.MyProfileActivity">

    <RelativeLayout
        android:id="@+id/id_li_profile_photo"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/profile_photo"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/id_iv_my_photo"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_width="80dp"
            android:layout_height="80dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_li_profile_name"
        android:layout_marginTop="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nick_name"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/id_tv_my_name"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_li_profile_id"
        android:layout_marginTop="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/chat_id"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/id_tv_my_id"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_li_profile_gender"
        android:layout_marginTop="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ffffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/my_gender"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/id_tv_my_gender"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
